# investigator

./: .env  .gitignore  Cargo.toml  Makefile  README.md  bench.sh  bench.txt  benches.txt  rust-toolchain.toml  shell.nix
benches/: benchmark.rs
crates/dupdir/: Cargo.toml
crates/dupdir/src/: find.rs  hash.rs  lib.rs
crates/dupdir_cli/: Cargo.toml
crates/dupdir_cli/src/: main.rs
crates/dupdir_core/: Cargo.toml
crates/dupdir_core/src/: dir_files.rs  dir_hashes.rs  find.rs  hash.rs  lib.rs  tests.rs
crates/dupdir_hash/: Cargo.toml
crates/dupdir_hash/benches/: benchmark.rs
crates/dupdir_hash/src/: lib.rs  main.rs  tests.rs
crates/dupdir_tests/: Cargo.toml
crates/dupdir_tests/src/: lib.rs  tests.rs
crates/hashes/: Cargo.toml
crates/hashes/benches/: benchmark.rs
crates/hashes/src/: lib.rs  main.rs  tests.rs
crates/utils/src/: main.rs
dupdir/: Cargo.toml
dupdir/src/: ancestors.rs  dir_files.rs  dir_hashes.rs  dup_dirs.rs  find.rs  hash.rs  main.rs  old_dup_dirs.rs  reader.rs
find-files/: Cargo.toml
find-files-desktop/assets/: index.html
find-files/src/: html.rs  lib.rs  main.rs  model.rs
find-files/src/components/: file_table.rs
find-files/src/sql/: mod.rs
investigator/: Cargo.toml  README.md  bench.sh  bench.txt  build.rs
investigator/benches/: benchmark.rs
investigator/src/: lib.rs
nix/: flake.nix
src/: lib.rs  main.rs
utils/src/: cargo.rs  main.rs
