[workspace]
members = [
    "packages/dupdir",
    "packages/investigator",
    "packages/utils",
]

[workspace.dependencies]
criterion = { version = "*", default-features = false }
hex = { version = "*", default-features = false, features = ["alloc"] }
indicatif = { version = "*", default-features = false, features = ["rayon"] }
investigator.path = "packages/investigator"
paste = { version = "*", default-features = false }
rand = { version = "*", default-features = false }
rayon = { version = "*", default-features = false }
tempdir = { version = "*", default-features = false }
walkdir = { version = "*", default-features = false }
