[workspace]
resolver = "2"
members = [
    "crates/dupdir",
    "crates/dupdir_cli",
    "crates/dupdir_tests",
    "crates/hashes",
    "crates/utils",
]

[workspace.dependencies]
criterion    = { version = "*", default-features = false }
dupdir       = { path = "crates/dupdir" }
dupdir_tests = { path = "crates/dupdir_tests" }
hashes       = { path = "crates/hashes" }
hex          = { version = "*", default-features = false, features = ["alloc"] }
indicatif    = { version = "*", default-features = false, features = ["rayon"] }
paste        = { version = "*", default-features = false }
rand         = { version = "*", default-features = false, features = ["std", "std_rng"] }
rayon        = { version = "*", default-features = false }
tempdir      = { version = "*", default-features = false }
walkdir      = { version = "*", default-features = false }
