[workspace]
resolver = "2"
members = [
    "crates/dupdir_cli",
    "crates/dupdir_core",
    "crates/dupdir_hash",
    "crates/dupdir_tests",
]

[workspace.dependencies]
criterion    = { version = "*", default-features = false }
dupdir_cli   = { path = "crates/dupdir_cli" }
dupdir_core  = { path = "crates/dupdir_core" }
dupdir_hash  = { path = "crates/dupdir_hash" }
dupdir_tests = { path = "crates/dupdir_tests" }
hex          = { version = "*", default-features = false, features = ["alloc"] }
indicatif    = { version = "*", default-features = false, features = ["rayon"] }
paste        = { version = "*", default-features = false }
rand         = { version = "*", default-features = false, features = ["std", "std_rng"] }
rayon        = { version = "*", default-features = false }
serde        = { version = "*", default-features = false, features = ["derive"] }
serde_json   = { version = "*", default-features = false, features = ["std"] }
tempdir      = { version = "*", default-features = false }
walkdir      = { version = "*", default-features = false }

[profile.release]
# Improves the quality of the information presented in the flamegraph when profiling release builds
# with `cargo-flamegraph`.
debug = true
