[package]
name = "dupdir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
indicatif = { version = "0.17.1", features = ["rayon"] }
investigator = { path = "../investigator" }
rayon = "1.5.3"
walkdir = "2.3.2"
