[package]
name = "find-files"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# `bundled` causes rusqlite to automatically compile and link in an up to date version of SQLite.
# This avoids many common build issues, and avoids depending on the version of SQLite on the user's
# system (or developer's system), which may be old or missing. It's the right choice for most
# programs that control their own SQLite databases.
rusqlite = { version = "0.29.0", default-features = false, features = ["bundled", "i128_blob"] }
walkdir = { version = "2.3.3", default-features = false }
anyhow = { version = "1.0.71", default-features = false, features = ["std"] }
wasm-logger = { version = "0.2.0", default-features = false }
wasm-bindgen = { version = "0.2.84", default-features = false }
console_error_panic_hook = { version = "0.1.7", default-features = false }
dioxus = { version = "0.3.2", default-features = false, features = ["html", "macro"] }
dioxus-desktop = { version = "0.3.0", default-features = false, features = ["tokio_runtime"] }
